Hopefully fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .navbar a {
-  font-size: 18.5px;
+  font-size: 1.25vw;
   color: #3B6280;
   text-align: center;
   padding: 10px 16px;
